Custom versions repository